# callm

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  config.json  configure.sh  go.mod  main.c  main.go  main.py  matrix.c  matrix.h  pyproject.toml  requirements_dev.txt  safetensors.c  safetensors.h  setup.py  tensor.c  tensor.h  tests.ipynb  toto.py  types.c  types.h  utils.h
callmapp/: package-lock.json  package.json
callmapp/src/: App.css  App.tsx  Matrix.tsx  MatrixList.tsx  main.tsx  useSSE.ts
callmapp/src/components/: Matrix.tsx  MatrixList.tsx
callmapp/src/entities/: ProbeMessage.ts  matrix.ts
cmake/: AddGitSubmodule.cmake  CPM.cmake  Docs.cmake
fake_model/: requirements.txt  train.py
internal/srvprobe/: server.go
lib/: CMakeLists.txt  errors.h  hash_table.c  hash_table.h  linear_map.c  linear_map.h  logging.h
llama_python/: __main__.py  configuration.py  model.py  modeling.ipynb  tokenizer.ipynb  tokenizer.py
resources/original_llama/: config.json  tokenizer_config.json
scripts/: install.sh
src/: CMakeLists.txt
src/core/: CMakeLists.txt  base64.c  base64.h  bf16.c  config.c  config.h  errors.h  json.h  linked_list.c  linked_list.h  logging.h  maths.c  maths.h  matrix.c  matrix.h  matrix_view.c  matrix_view.h  safetensors.c  safetensors.h  tensor.c  tensor.h  tensor_OLD.c  uthash.h
src/core/memory/: CMakeLists.txt  block.c  block.h
src/lib/: python_ext.c
src/llm/: CMakeLists.txt  attention.c  attention.h  decoder.c  decoder.h  embeddings.c  embeddings.h  mlp.c  mlp.h  model.c  model.h  rms_norm.c  rms_norm.h  rotary_embedding.c  rotary_embedding.h
src/main/: CMakeLists.txt  main.c
src/maths/: CMakeLists.txt  bf16.c  bf16.h  matrix.c  matrix.h  safetensors.c  safetensors.h
src/monitor/: CMakeLists.txt  probe.c  probe.h
src/python/: CMakeLists.txt  _pycallm.c
src/shared/: CMakeLists.txt  errors.h  logging.h  utils.h
src/tokenizer/: CMakeLists.txt  tokenizer.c  tokenizer.h
src/utils/: CMakeLists.txt  dynamic_list.c  dynamic_list.h  errors.c  errors.h  hash_map.c  hash_map.h  hash_table.c  hash_table.h  json.h  linear_map.c  linear_map.h  linked_list.c  logging.h
tests/integration/: load_safetensors.py
tests/unit/: CMakeLists.txt
tests/unit/core/: CMakeLists.txt  test_base64.c  test_matrix.c  test_matrix_view.c
tests/unit/tokenizer/: CMakeLists.txt  test_tokenizer_encode.c
tests/unit/utils/: CMakeLists.txt  test_hash_map.c
tokenizer/: CMakeLists.txt  tiktoken.rs  tokenizer.c  tokenizer.h  vocab.c  vocab.h
tools/: safetensors.py
